[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Ui/arrow_button_pressed.png" type="Texture" id=1]
[ext_resource path="res://Player/Heroina.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprite sheets/ui.png" type="Texture" id=3]
[ext_resource path="res://Scenes/CharCreation/CharCreate.gd" type="Script" id=4]
[ext_resource path="res://Assets/Ui/male_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Ui/female_button.png" type="Texture" id=6]
[ext_resource path="res://Assets/Ui/arrow_button.png" type="Texture" id=7]
[ext_resource path="res://Assets/Ui/male_button.png" type="Texture" id=8]
[ext_resource path="res://Assets/Ui/female_button_pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/Fonts/manaspc.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/Images/background.jpg" type="Texture" id=11]
[ext_resource path="res://Assets/Ui/background.png" type="Texture" id=12]
[ext_resource path="res://Assets/Ui/play_button.png" type="Texture" id=13]
[ext_resource path="res://Assets/Ui/play_button_pressed.png" type="Texture" id=14]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[node name="CharCreate" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 159.268, 89.7759 )
scale = Vector2( 0.165905, 0.149626 )
texture = ExtResource( 11 )

[node name="CreationScreen" type="Sprite" parent="."]
position = Vector2( 162.979, 134.275 )
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 48, 45 )

[node name="Female" type="TextureButton" parent="CreationScreen"]
margin_left = -8.99872
margin_top = -3.28063
margin_right = -1.99872
margin_bottom = 6.71937
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Male" type="TextureButton" parent="CreationScreen"]
margin_left = 1.00128
margin_top = -2.28063
margin_right = 10.0013
margin_bottom = 6.71937
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skin" type="Sprite" parent="CreationScreen"]
position = Vector2( 0.0538406, 12.7194 )
scale = Vector2( 1.00553, 1 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 14, 121, 19, 9 )

[node name="Next" type="TextureButton" parent="CreationScreen/Skin"]
margin_left = 11.2784
margin_top = -1.72159
margin_right = 14.2784
margin_bottom = 3.27841
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="TextureButton" parent="CreationScreen/Skin"]
margin_left = -11.0497
margin_top = 3.23402
margin_right = -8.04971
margin_bottom = 8.23402
rect_rotation = -180.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CreationScreen/Skin"]
margin_left = -1.0
margin_top = 1.0
margin_right = 3.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0.54902, 0.619608, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Sprite" parent="CreationScreen"]
position = Vector2( 0.00128174, -11.4056 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 51.7161, 50.2759, 40.7252, 12.958 )

[node name="LineEdit" type="LineEdit" parent="CreationScreen/Name"]
margin_left = -18.0
margin_top = -1.0
margin_right = 18.0
margin_bottom = 5.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 10 )
custom_colors/cursor_color = Color( 0, 0.729412, 0.701961, 1 )
custom_colors/font_color = Color( 0, 0.729412, 0.701961, 1 )
align = 1
max_length = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Node2D" parent="."]
position = Vector2( 133.218, 140.878 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 2 )
hframes = 12
vframes = 8
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
autoplay = "Idle"
anims/Idle = SubResource( 3 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 151.198
margin_top = 159.58
margin_right = 174.198
margin_bottom = 172.58
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CreationScreen/Female" to="." method="_on_Female_pressed"]
[connection signal="pressed" from="CreationScreen/Male" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CreationScreen/Skin/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="CreationScreen/Skin/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
